<resources>
    <string name="app_name">VART</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="create_your_account">CREATE YOUR ACCOUNT</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="liked">Liked</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Number</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="arts">Arts</string>
    <string name="profile_name">Full name</string>
    <string name="bio">Bio</string>
    <string name="_0">0</string>
    <string name="follow">Follow</string>
    <string name="become_a_creator">Become a creator</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="change_name">CHANGE NAME</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="edit_name">Edit name</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="btn_change_pass">CHANGE PASSWORD</string>
    <string name="edit_bio">Edit bio</string>
    <string name="enter_bio">Enter Bio</string>
    <string name="update_bio">UPDATE BIO</string>
    <string name="upload_picture">UPLOAD PICTURE</string>
    <string name="select_profile_picture">Select profile picture</string>
    <string name="e_g_the_star_gazing">e.g. The Star Gazing</string>
    <string name="title_of_your_art">Title of your art</string>
    <string name="art_description">Art description</string>
    <string name="description">Description</string>
    <string name="upload_art">UPLOAD ART</string>
    <string name="select_art_to_upload">Select art to upload</string>
    <string name="title">Title</string>
    <string name="like">like</string>
    <string name="save">save</string>
    <string name="comment">comment</string>
    <string name="no_arts_posted">No arts posted</string>
    <string name="no_arts_liked_yet">No arts liked yet</string>
</resources>