<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!--        <ImageView-->
<!--            android:id="@+id/logo"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="49dp"-->
<!--            android:layout_weight="1"-->
<!--            android:importantForAccessibility="no"-->
<!--            app:srcCompat="@drawable/logo" />-->

        <TextView
            android:id="@+id/tvaAppName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/logo_small"
            android:drawablePadding="10dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/name"
        android:drawablePadding="10dp"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="#999999"
        android:textColorHighlight="@color/cardview_light_background"
        android:textColorHint="#999999" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#999999"
        android:textColorHighlight="@color/cardview_light_background"
        android:textColorHint="#999999" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="#999999"
        android:textColorHighlight="@color/cardview_light_background"
        android:textColorHint="#999999" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="#999999"
        android:textColorHighlight="@color/cardview_light_background"
        android:textColorHint="#999999" />

    <EditText
        android:id="@+id/etRePass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="#999999"
        android:textColorHighlight="@color/cardview_light_background"
        android:textColorHint="#999999" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#FF50B5"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>