<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".EditName">

    <include
        android:id="@+id/tb"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="5dp"
            android:text="@string/enter_new_name" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="#999999"
            android:textColorHighlight="@color/cardview_light_background"
            android:textColorHint="#999999"
            android:elevation="5dp"/>

        <Button
            android:id="@+id/btnChangeName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="300dp"
            android:backgroundTint="#FF50B5"
            android:textColor="@color/white"
            android:text="@string/change_name"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>