<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Post">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/tb"
            layout="@layout/toolbar" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/white"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profileCard"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_profile"
                    tools:ignore="contentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/bin"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/save" />

            </RelativeLayout>


        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/white"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/default_art"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="H,1:1">

                <ImageView
                    android:id="@+id/art"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_art"
                    tools:ignore="contentDescription" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp">

            <ImageButton
                android:id="@+id/likeButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/hollow_like"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/like" />

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/_0" />

            <ImageButton
                android:id="@+id/commentButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/comment"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/comment"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/_0" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/saves"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toStartOf="@id/saveButton"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/_0" />

                <ImageButton
                    android:id="@+id/saveButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/save"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/save" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            android:id="@+id/artTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            android:id="@+id/artDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"/>

    </LinearLayout>

</ScrollView>